Fix IdsButton/IdsEditor/IdsToolbar missing color variants

--- a/src/components/ids-button/ids-button.scss
+++ b/src/components/ids-button/ids-button.scss
@@ -71,7 +71,7 @@ button {
     @include block();
   }
 
-  &:not(.no-padding):not(.ids-icon-button):not(.ids-icon-button):not(.ids-trigger-button) {
+  &:not(.no-padding):not(.ids-icon-button):not(.ids-trigger-button) {
     @include ids-standard-button-padding();
   }
 
